--- a/src/FilRougeBundle/Resources/views/Default/index.html.twig
+++ b/src/FilRougeBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="First slide">
+          <img class="first-slide" src="{{ asset('img/imgCarousel/got4.jpg') }}" alt="First slide">
           <div class="container">
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Game of Thrones.</h1>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="Second slide">
+          <img class="second-slide" src="{{ asset('img/imgCarousel/Mr_robot_03.jpg') }}" alt="Second slide">
           <div class="container">
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Mr Robot.</h1>
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="Third slide">
+          <img class="third-slide" src="{{ asset('img/imgCarousel/breakbad3.jpg') }}" alt="Third slide">
           <div class="container">
             <div class="carousel-caption ">
               <h1 class="IntroFontCarousel">Breaking Bad</h1>
