--- a/app/Resources/views/includes/login.html.twig
+++ b/app/Resources/views/includes/login.html.twig
@@ -1,11 +1,11 @@
-
   <!-- Modal -->
+
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
       <!-- Modal content-->
       <div class="modal-content">
-        <div class="modal-header" style="padding:35px 50px;">
+          <div class="modal-header" style="padding:35px 50px;">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
         </div>
@@ -13,14 +13,17 @@
           {{ render(controller("FOSUserBundle:Security:login")) }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-login btn-default pull-left" data-dismiss="modal">Cancel</button>
-          <p>Not a member? <a href="#">Sign Up</a></p>
-          <p>Forgot <a href="#">Password?</a></p>
+          <!-- <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">Cancel</button> -->
+              <button type="submit" id="_submit" name="_submit" class="btn btn-login  pull-left" >Log In</button>
+</form>
+          <p class="register-class">Not a member? <a href="#">Sign Up</a></p>
+          <p class="register-class">Forgot <a href="#">Password?</a></p>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
