--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -35,7 +35,7 @@
 {% block body %} <!-- contenu -->
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <img src="{{ asset(serie.getImageName()) }}" class="poster" />
+      <img src="{{ asset(serie.picture) }}" class="poster" />
     </div>
     <div class="col-xs-12  col-sm-4 col-md-6">
       <h1>{{ serie.title }}</h1>
