--- a/src/FilRougeBundle/Resources/views/Default/index.html.twig
+++ b/src/FilRougeBundle/Resources/views/Default/index.html.twig
@@ -49,7 +49,9 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div><!-- /.carousel -->{% endblock %}
+    </div><!-- /.carousel -->
+    {{ liip_search_box(query, 'query-field-id', 'css-class') }}
+    {% endblock %}
 
 
 {% block panel %}
