--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,9 +35,52 @@
   </main><!-- Main end -->
 {% include 'includes/footer.html.twig' %}
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="{{ asset('js/carousel.js') }}"></script>
+  {% javascripts
+    'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+    'http://code.jquery.com/ui/1.11.4/jquery-ui.min.js'
+    'js/carousel.js'
+  %}
+  <script type="text/javascript" src="{{ asset_url }}"></script>
+  <script type="text/javascript">
+    //modal login
+    $(document).ready(function(){
+        $("#signin-button").click(function(){
+            $("#myModal").modal();
+        });
+    });
+    //search autocompletion
+    $(function() {
+      $("#tags").autocomplete({
+        source: function( request, response ) {
+          $.ajax({
+            url: '{{ path('ajax_search') }}',
+            type: 'GET',
+            data: {
+              q: request.term
+            },
+            success: function(data){
+              console.log(data);
+              response( data );
+            },
+            error: function(error){
+              console.log(error);
+            }
+          });
+        },
+        minLength: 2
+      });
+    });
+    //search bar
+    $("#search_bar").hide();
+    $("#search_button").off().on("click", function(){
+      $("#search_bar").toggle(300);
+    });
+    $("#search_button_main").off().on("click", function(){
+      $("#search_bar").toggle(300);
+    });
+
+  </script>
+  {% endjavascripts %}
 
 </body>
 </html>
