--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="{{ asset('css/colorGuide.css') }}">
         <link rel="stylesheet" href="{{ asset('css/carousel.css') }}">
         <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
-        <link rel="stylesheet" href="{{ asset('@IdeatoStarRatingBundle/Resources/public/jquery.raty.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('css/jquery.raty.css') }}" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" /> <!-- Icone d'onglet a revoir -->
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     </head>
     <body>
     <header>
