--- a/app/Resources/views/serie/index.html.twig
+++ b/app/Resources/views/serie/index.html.twig
@@ -11,7 +11,7 @@
     <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
       <div class="container col-lg-3 col-sm-4 col-xs-6">
           <h2 class="titre-serie">{{ serie.title }}</h2>
-          <img class="img-responsive img-film-galerie" src="{{ asset(serie.getImageName()) }}" alt="">
+          <img class="img-responsive img-film-galerie" src="{{ asset(serie.getPicture()) }}" alt="">
       </div>
     </a>
   {% endfor %}
