--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -11,7 +11,8 @@
   </ul>
 {% endblock %}
 
-{% block side_content %} <!-- surcharge du block side_content droit -->
+{% block side_content %}
+  {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
   <div class="panel panel-default">
     <div class="panel-heading">Menu admin</div>
     <div class="panel-body">
@@ -23,19 +24,22 @@
           <a href="{{ path('episode_new', { 'id': serie.id }) }}">Ajouter un épisode</a>
         </div>
         <div class="row">
+        {% if is_granted("ROLE_ADMIN") %}
           {{ form_start(delete_form) }}
             <button type="submit" id="delete" class="btn btn-xs btn-danger"><i class='fa fa-exclamation-triangle' aria-hidden='true'></i> Delete</button>
           {{ form_end(delete_form) }}
+        {% endif %}
         </div>
       </div>
     </div>
   </div>
+  {% endif %}
 {% endblock %}
 
 {% block body %} <!-- contenu -->
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <img src="{{ asset(serie.picture) }}" class="poster" />
+      <img src="{{ asset(serie.getPicture()) }}" class="poster" />
     </div>
     <div class="col-xs-12  col-sm-4 col-md-6">
       <h1>{{ serie.title }}</h1>
@@ -85,26 +89,18 @@
     </div>
   </div>
 
-  {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %} <!-- condition si authentifié -->
-    <div class="col-sm-12 jumbotron mt30p">
-      {% stylesheets 'css/comments.css' %}
-        <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
-      {% endstylesheets %}
-      {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': serie.id } %} <!-- affichage des commentaires et du formulaire -->
-    </div>
-
-    {% else %} <!-- todo : outil de tradiction à mettre en place -->
-      <p>
-        Vous devez vous logger pour commenter cette serie.
-      </p>
-      <button type="button" class="btn btn-primary"><i class="fa fa-sign-in"></i> Sign in</button>&nbsp;or&nbsp;
-      <button type="button" class="btn btn-primary">Sign up</button>
-
-  {% endif %}
+  <div class="col-sm-12 jumbotron mt30p">
+    {% stylesheets 'css/comments.css' %}
+      <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
+    {% endstylesheets %}
+    {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %} <!-- condition si authentifié -->
+      {% include 'includes/not_logged.html.twig' %}
+    {% endif %}
+    {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': serie.id } %} <!-- affichage des commentaires et du formulaire -->
+  </div>
 
       <!-- chargement du JS -->
       {% javascripts
-        'http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'
         '@IdeatoStarRatingBundle/Resources/public/jquery.raty.js'
         '@IdeatoStarRatingBundle/Resources/public/jquery.starrating.js'
         'js/ajaxServices.js'
@@ -118,20 +114,19 @@
           */
         $.ajax(
           {
-            url:"{{ path('ajax_isfollowed') }}",
-            data: { id: {{ serie.id}} },
+            url:"{{ path('ajax_isfollowed', { 'id': serie.id }) }}",
             success: function(data){
               if (data) {
                 $("#follow").html(data);
               }
             },
             error: function(error){
-              console.log(error);
+              //console.log(error);
             }
           }
         );
 
-        $('#follow').click( function()
+        $('#follow').off().on("click", function()
         {
           /**
           * Follow Ajax request
@@ -140,13 +135,11 @@
           */
           $.ajax(
             {
-              url:"{{ path('ajax_follow') }}",
-              data: { id: {{ serie.id}} },
+              url:"{{ path('ajax_follow', { 'id':  serie.id }) }}",
               success: function(data){
                 $("#follow").html(data);
               },
               error: function(error){
-                console.log(error);
               }
             }
           );
