--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,6 +1,7 @@
 {% include 'includes/header.html.twig' %}
 {% include 'includes/navbar.html.twig' %}
 {% include 'includes/login.html.twig' %}
+{% include 'includes/sign_up.html.twig' %}
 
   <div> <!-- todo : placer flashbag -->
     {% if app.request.hasPreviousSession %}
