--- a/web/css/colorGuide.css
+++ b/web/css/colorGuide.css
@@ -98,12 +98,14 @@ margin-top: 50px;
   background-color: #666666;
 }
 
-.menu-gris a {
+.grey-menu a {
+  font-family: "IntroFont";
   color:#666666;
   background-color: #ffffff;
 }
 
-.menu-gris:hover a:hover{
+.grey-menu:hover a:hover{
+  font-family: "IntroFont";
   color:#ffffff;
   background-color: #666666;
 }
@@ -132,7 +134,7 @@ margin-top: 50px;
  color: #ffffff;
 }
 
-.nav > .menu-gris > a:focus{
+.nav > .grey-menu > a:focus{
  text-decoration: none;
  background-color: #666666;
  color: #ffffff;
