--- a/src/FilRougeBundle/Resources/views/Default/index.html.twig
+++ b/src/FilRougeBundle/Resources/views/Default/index.html.twig
@@ -8,37 +8,24 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Game of Thrones.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
+          <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="got">
+          <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/gotPoster.jpg') }}" alt="gotPoster">
         </div>
         <div class="item">
-          <img class="second-slide" src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Mr Robot.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
+          <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="breakingBad">
+          <img class="hidden-lg hidden-md hidden-sm visible-xs posterH "  src="{{ asset('img/imgCarousel/breakingBadPoster.jpg') }}" alt="breakingBadPoster">
         </div>
         <div class="item">
-          <img class="third-slide" src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Breaking Bad</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
+          <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="mrRobot">
+          <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/mrRobotPoster.jpg') }}" alt="mrRobotPoster">
+        </div>
+        <div class="item">
+          <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/jJones.jpg') }}" alt="jJones">
+          <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/jJonesPoster.jpg') }}" alt="jJonesPoster">
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
