--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
     {% endif %}
   </div>
 
-  <main>
+  <main class="background-color">
     {% block carousel %}{% endblock %}
     <div class="container-fluid mt30p">
       <aside class="col-md-2 visible-md visible-lg hidden-sm">
