--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block body %} <!-- contenu -->
-  <div class="row">
+  <div class="row background-color">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <img src="{{ asset(serie.getPicture()) }}" class="poster" />
     </div>
