--- a/web/css/colorGuide.css
+++ b/web/css/colorGuide.css
@@ -269,7 +269,8 @@ margin-top: 50px;
 
 
 .background-color{
-  background-color: #f3f2f0;
+background-color: #f3f2f0;
+/* background-color: yellow; */
 }
 
 
