--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -1,4 +1,4 @@
-  <footer class="container text-center mt30p">
+  <footer class="container-fluid text-center background-color">
     <div class="row">
       <div class="col-md-xs">
         <p>Projet Fil Rouge 2016 - Alex & Manu</p>
