--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -1,7 +1,8 @@
-  <footer class="container-fluid text-center background-color">
-    <div class="row">
-      <div class="col-md-xs">
-        <p>Projet Fil Rouge 2016 - Alex & Manu</p>
-      </div>
+<footer class="container text-center mt30p">
+  <div class="row">
+    <div class="col-md-xs">
+    <hr>
+      <p>Projet Fil Rouge 2016 - Alex & Manu</p>
     </div>
-  </footer><!-- Footer end -->
+  </div>
+</footer><!-- Footer end -->
